# INS-GPS-ROS2

./: .gitignore  bash_gazebo_sim_mc_run.sh  bash_gazebo_sim_run.sh  bash_gazebo_sim_single_run.sh  bash_pre_sim_build.sh
Matlab_Analiz/: ros2bag_opener_strap_node.m
images/: long_slip_vs_lat_force.fig  long_slip_vs_long_force.fig  side_slip_vs_lat_force.fig  side_slip_vs_long_force.fig
imu_data_only/: imu_data_only_0.db3  metadata.yaml
imu_strap_data_only/: metadata.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/ht_nav_variables/: CMakeLists.txt  package.xml
src/ht_nav_variables/msg/: HtNavContactState.msg  HtNavContactStates.msg  HtNavGpsData.msg  HtNavImuData.msg  HtNavJointState.msg  HtNavKalmanOut.msg  HtNavStrapOut.msg
src/ht_strap_package/: package.xml  setup.cfg  setup.py
veri_gazebo/veri_1/: aob_veri_gazebo.txt  controller_kalman_data_in .txt  controller_kalman_data_in.txt  controller_strap_data_in.txt  gps_veri_gazebo.txt  ideal_gps_veri_gazebo.txt  ros_gazebo_kalman_out.txt  strap_data_gazebo_ros_kalman_out.txt
veri_gazebo/veri_2/: aob_veri_gazebo.txt  controller_kalman_data_in.txt  controller_strap_data_in.txt  gazebo_joint_states.txt  gps_veri_gazebo.txt  ideal_gps_veri_gazebo.txt  ros_gazebo_kalman_out.txt  strap_data_gazebo_ros_kalman_out.txt
veri_gazebo/veri_3_joint_vel_50Hz/: aob_veri_gazebo.txt  controller_kalman_data_in.txt  controller_strap_data_in.txt  gazebo_joint_states.txt  gps_veri_gazebo.txt  ideal_gps_veri_gazebo.txt  ros_gazebo_kalman_out.txt  strap_data_gazebo_ros_kalman_out.txt
veri_gazebo/veri_4_joint_vel_25Hz/: aob_veri_gazebo.txt  controller_kalman_data_in.txt  controller_strap_data_in.txt  gazebo_joint_states.txt  gps_veri_gazebo.txt  ideal_gps_veri_gazebo.txt  ros_gazebo_kalman_out.txt  strap_data_gazebo_ros_kalman_out.txt
worlds/: city.world  city_mk5.world  empty.world  empty_city.world  empty_city_mk5.world  empty_mk5.world  new_city.world  new_city_2.world
(+680 files in other folders)
